--- a/ProposalTA.tex
+++ b/ProposalTA.tex
@@ -208,7 +208,7 @@
     
     \vspace*{2cm}
     
-    {\Large\bfseries PERANCANGAN SISTEM INFORMASI AKADEMIK BERBASIS WEB}\\
+    {\Large\bfseries PERANCANGAN ALUR EA GOVERNANCE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
      \vspace{4cm}
 
     {\Large \textbf{Proposal Tugas Akhir}}\\
@@ -219,8 +219,8 @@
     
     {\large Oleh}\\[0.3cm]
     \textbf{
-    {\large John Doe}\\
-    {\large 18299000}
+    {\large Givari Al Fachri}\\
+    {\large 18222045}
     }\\
 
     \vspace{2cm}
@@ -255,7 +255,7 @@
   \textbf{\large LEMBAR PENGESAHAN}\\[1cm]
   \vspace*{1.5cm}
     
-  {\large\bfseries PERANCANGAN SISTEM INFORMASI AKADEMIK BERBASIS WEB}\\
+  {\large\bfseries PERANCANGAN ALUR EA GOVERNANCE UNTUK INISIATIF DIGITAL DI PERUSAHAAN BEAUTY FMCG PARAGON CORP}\\
      \vspace{2cm}
 
   {\Large \textbf{Proposal Tugas Akhir}}\\
@@ -266,8 +266,8 @@
     
   {\large Oleh}\\[0.3cm]
     \textbf{
-    {\large John Doe}\\
-    {\large 18299000}
+    {\large Givari Al Fachri}\\
+    {\large 18222045}
   }\\
     
   \vspace{0.5cm}
@@ -285,8 +285,8 @@
 % Versi 1 pembimbing (default)
 % ==========================================
 	Pembimbing  \\[3cm]
-	Dr. Ir. John Doe, M.T.   \\[0.2cm]
-	NIP. 123456789 
+	Dr. Lenny Putri Yulianti, S.T., M.T.   \\[0.2cm]
+	NIP. 119110073 
 % ==========================================
 
 \end{center}
