--- a/daftar-pustaka.bib
+++ b/daftar-pustaka.bib
@@ -1,136 +1,139 @@
-@book{laudon2020,
-  author    = {Kenneth C. Laudon and Jane P. Laudon},
-  title     = {Sistem Informasi Manajemen},
-  year      = {2020},
-  publisher = {Pearson Education},
-  address   = {Jakarta}
+@article{juraida2024enterprise,
+  title={Enterprise Architecture As An Enabler Of Digital Transformation In The Government Sector: Success Factors And Maturity Evaluation Methodology},
+  author={Juraida, Erni and Sensuse, Dana Indra},
+  journal={Eduvest-Journal of Universal Studies},
+  volume={4},
+  number={11},
+  pages={9821--9842},
+  year={2024}
 }
 
-@book{pressman2019,
-  author    = {Roger S. Pressman},
-  title     = {Rekayasa Perangkat Lunak: Pendekatan Praktisi},
-  year      = {2019},
-  publisher = {McGraw-Hill Education},
-  address   = {Yogyakarta}
+@article{maita2022perancangan,
+  title={Perancangan enterprise architecture untuk mendukung transformasi digital usaha kecil dan menengah (UMKM) menggunakan TOGAF ADM},
+  author={Maita, Idria and others},
+  journal={Jurnal Ilmiah Rekayasa dan Manajemen Sistem Informasi},
+  volume={8},
+  number={1},
+  pages={48--54},
+  year={2022}
 }
 
-@misc{BPBI,
-        title = {Buku {Praktis} {Bahasa} {Indonesia} 1/{Kata} - {Wikisumber} bahasa {Indonesia}},
-        url = {https://id.wikisource.org/wiki/Buku_Praktis_Bahasa_Indonesia_1/Kata},
-        year = {2024},
-        urldate = {2025-10-22},
+@article{lase2019developing,
+  title={Developing the indonesian government enterprise architecture framework appropriate for Indonesian government agencies},
+  author={Lase, Asbartanov and Ranti, Benny},
+  journal={Int J Inf \& Commun Technol ISSN},
+  volume={2252},
+  number={8776},
+  pages={8776},
+  year={2019}
 }
 
-@book{brynjolfsson2021machine,
-  author       = {Erik Brynjolfsson and Andrew McAfee},
-  title        = {The Machine, Platform, Crowd: Harnessing Our Digital Future},
-  publisher    = {W. W. Norton \& Company},
-  year         = {2021},
-  address      = {New York},
-  edition      = {Updated edition},
+@article{virantina2020digital,
+  title={Digital Enterprise Architecture to Support Effective and Efficient Statistical Production},
+  author={Virantina, Yulia and Saputra, Herman and Rahman, Khalilur and Rachmawati, Eka Miftakhul},
+  journal={2020 Asia--Pacific Statistics Week, United Nations},
+  volume={1},
+  pages={15--20},
+  year={2020}
 }
 
-@book{shapiro2019information,
-  author       = {Carl Shapiro and Hal R. Varian},
-  title        = {Information Rules: A Strategic Guide to the Network Economy},
-  publisher    = {Harvard Business School Press},
-  year         = {2019},
-  address      = {Boston},
+@article{sasongko2024enterprise,
+  title={Enterprise Architecture Management and its Role in Corporate Strategic Management},
+  author={Sasongko, Hendro},
+  journal={Journal of Economics \& Business},
+  year={2024}
 }
 
-@article{nguyen2022trust,
-  author       = {Linh T. Nguyen and Sarah Patel},
-  title        = {Trust, Privacy, and Data Ethics in AI Systems},
-  journal      = {Ethics and Information Technology},
-  volume       = {24},
-  number       = {3},
-  pages        = {315--332},
-  year         = {2022},
-  doi          = {10.1007/s10676-021-09612-8},
+@book{ross2006enterprise,
+  title={Enterprise architecture as strategy: Creating a foundation for business execution},
+  author={Ross, Jeanne W and Weill, Peter and Robertson, David},
+  year={2006},
+  publisher={Harvard business press}
 }
 
-@article{williams2023supplychain,
-  author       = {Thomas Williams and Priya Singh},
-  title        = {Blockchain Applications for Transparent Supply Chains},
-  journal      = {Journal of Operations Management},
-  volume       = {74},
-  number       = {2},
-  pages        = {141--158},
-  year         = {2023},
-  doi          = {10.1016/j.jom.2023.01.005},
+@book{ahlemann2012strategic,
+  title={Strategic enterprise architecture management: challenges, best practices, and future developments},
+  author={Ahlemann, Frederik and Stettiner, Eric and Messerschmidt, Marcus and Legner, Christine},
+  year={2012},
+  publisher={Springer Science \& Business Media}
 }
 
-@inproceedings{rahman2024iot,
-  author       = {Faisal Rahman and Julia Chen},
-  title        = {Optimizing IoT Networks for Smart Cities},
-  booktitle    = {Proceedings of the IEEE International Conference on Smart Infrastructure},
-  year         = {2024},
-  address      = {Tokyo, Japan},
-  publisher    = {IEEE},
-  pages        = {55--64},
-  doi          = {10.1109/SI2024.9023417},
+@book{luisi2014pragmatic,
+  title={Pragmatic enterprise architecture: Strategies to transform information systems in the era of big data},
+  author={Luisi, James},
+  year={2014},
+  publisher={Morgan Kaufmann}
 }
 
-@incollection{miller2023cyber,
-  author       = {Jason Miller},
-  title        = {Cybersecurity Governance in Cloud Ecosystems},
-  booktitle    = {Handbook of Information Systems Security},
-  editor       = {Karen Chen and David Brooks},
-  publisher    = {Springer},
-  year         = {2023},
-  address      = {Berlin},
-  pages        = {181--205},
-  doi          = {10.1007/978-3-031-11321-0_9},
+@book{minoli2008enterprise,
+  title={Enterprise architecture A to Z: frameworks, business process modeling, SOA, and infrastructure technology},
+  author={Minoli, Daniel},
+  year={2008},
+  publisher={Auerbach Publications}
 }
 
-@phdthesis{garcia2020ethics,
-  author       = {Maria Garcia},
-  title        = {Data Ethics in Machine Learning Systems},
-  school       = {Massachusetts Institute of Technology},
-  year         = {2020},
-  address      = {Cambridge, MA},
-  type         = {PhD dissertation},
+@article{jager2023getting,
+  title={Getting started with enterprise architecture},
+  author={Jager, Eric},
+  journal={Getting Started with Enterprise Architecture. Apress. https://doi. org/10.1007/978-1-4842-9858-9},
+  year={2023},
+  publisher={Springer}
 }
 
-@techreport{un2024ai,
-  author       = {{United Nations Department of Economic and Social Affairs}},
-  title        = {AI and Global Development: Policy Outlook 2024},
-  institution  = {United Nations},
-  year         = {2024},
-  address      = {New York},
-  url          = {https://www.un.org/ai-global-development-2024},
+@article{josey2017togaf,
+  title={TOGAF Version 9: Ein Pocket Guide},
+  author={Josey, Andrew},
+  year={2017},
+  publisher={Van Haren Publishing}
 }
 
-@manual{iso2023data,
-  organization = {{International Organization for Standardization}},
-  title        = {ISO/IEC 27001:2023 – Information Security Management Systems},
-  year         = {2023},
-  address      = {Geneva},
-  url          = {https://www.iso.org/standard/27001.html},
+@inproceedings{korhonen2009ea,
+  title={EA and IT governance- A systemic approach},
+  author={Korhonen, Janne J and Hiekkanen, Kari and L{\"a}hteenm{\"a}ki, Jouni},
+  booktitle={European Conference on Leadership, Management and Governance},
+  year={2009}
 }
 
-@online{worldbank2025report,
-  author       = {{World Bank}},
-  title        = {The Digital Economy Report 2025: Innovation, Inclusion, and Inequality},
-  year         = {2025},
-  url          = {https://www.worldbank.org/digital-economy-2025},
-  note         = {Accessed October 22, 2025},
+@online{ParagonInnovation,
+    author = {{PT Paragon Technology and Innovation}},
+    title = {{Paragon Technology and Innovation}},
+    url = {https://www.paragon-innovation.com/},
+    organization = {ParagonCorp},
+    note = {Akses dilakukan pada 2 November 2025} 
 }
 
-@misc{doe2025quantum,
-  author       = {Jane Doe},
-  title        = {The Rise of Quantum Computing Startups},
-  howpublished = {\url{https://www.techinsights.com/articles/rise-of-quantum-computing-startups}},
-  year         = {2025},
-  note         = {Accessed October 20, 2025},
+@online{LeanixEAGov,
+    author = {{SAP LeanIX}},
+    title = {{A Definitive Guide to Enterprise Architecture Governance}},
+    url = {https://www.leanix.net/en/wiki/ea/enterprise-architecture-governance},
+    organization = {SAP LeanIX},
+    note = {Akses dilakukan pada 2 November 2025} 
 }
 
-@article{nytimes2024aiethics,
-  author       = {Alex Johnson},
-  title        = {Tech Leaders Debate Regulation of Artificial Intelligence},
-  journal      = {The New York Times},
-  year         = {2024},
-  month        = {March 15},
-  url          = {https://www.nytimes.com/2024/03/15/technology/ai-regulation-debate.html},
-  note         = {Accessed October 22, 2025},
+@online{Christ2021LeanixReckitt,
+    author = {Christ, André},
+    title = {{LeanIX \& Reckitt: Moving towards Agile EA}},
+    url = {https://www.architectureandgovernance.com/elevating-ea/leanix-reckitt-moving-towards-agile-ea/},
+    journal = {Architecture \& Governance Magazine},
+    year = {2021},
+    note = {Diakses pada 2 November 2025} 
+}
+
+@online{Mone2018Helvetia,
+    author = {Moné, Lesa},
+    title = {{Enterprise Architecture Case Study: Helvetia + Nationale Suisse M\&A}},
+    url = {https://www.leanix.net/en/blog/enterprise-architecture-case-study-helvetia-nationale-suisse-ma},
+    journal = {SAP LeanIX Blog},
+    year = {2018},
+    note = {Diakses pada 2 November 2025}
+}
+
+@phdthesis{Hanafi2023PeranEA,
+    author = {Hanafi, Ridha},
+    title = {{Peran Arsitektur Enterprise dalam Peningkatan Kinerja Pemerintah Daerah Kabupaten/Kota di Provinsi Jawa Barat}},
+    school = {{Universitas Pendidikan Indonesia (UPI)}},
+    year = {2023},
+    type = {Disertasi S3},
+    url = {http://repository.upi.edu/109784/},
+    note = {Diakses pada 2 November 2025} 
 }
