--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -3,287 +3,220 @@
 % ==========================================
 \chapter{STUDI LITERATUR}
 \label{chap:studi-literatur}
-\section{Penulisan Gambar, Tabel, Rumus, dan Kode}
-\lipsum[1]
+\section{Konsep \textit{Enterprise Architecture} (EA)}
 
-\subsection{Gambar}
-Contoh gambar dapat dilihat pada Gambar \ref{gambar:jaringan}. Gambar dan judulnya diposisikan di tengah. Nomor gambar tidak diakhiri tanda titik. Gambar tersebut dibuat menggunakan aplikasi draw.io dan disimpan ke format PNG setelah dengan zoom setting pada angka 300\%. Ukuran gambar yang ditampilkan dapat diatur dengan mengubah nilai \textit{width} dalam sintaks \textit{includegraphics}.
+\subsection{Pengertian dan Tujuan \textit{Enterprise Architecture}}
+% Contoh gambar dapat dilihat pada Gambar \ref{gambar:jaringan}. Gambar dan judulnya diposisikan di tengah. Nomor gambar tidak diakhiri tanda titik. Gambar tersebut dibuat menggunakan aplikasi draw.io dan disimpan ke format PNG setelah dengan zoom setting pada angka 300\%. Ukuran gambar yang ditampilkan dapat diatur dengan mengubah nilai \textit{width} dalam sintaks \textit{includegraphics}.
+Definisi dari \textit{Enterprise Architecture} (EA) antara lain sebagai berikut:
+\begin{enumerate}
+  \item Menurut \textcite{ross2006enterprise}, \textit{enterprise architecture} adalah cara organisasi menghubungkan proses bisnis dengan infrastruktur Teknologi Informasi (TI) untuk memastikan integrasi dan standarisasi sesuai dengan model operasional perusahaan.
+  \item Menurut \textcite{ahlemann2012strategic}, \textit{enterprise architecture} adalah penetapan, pemeliharaan, dan penerapan serangkaian panduan, prinsip desain, dan aturan tata kelola yang terpadu sehingga struktur teknologi dan proses bisnis selalu selaras dan efektif dalam mencapai visi dan strategi jangka panjang perusahaan.
+  \item Menurut \textcite{luisi2014pragmatic}, \textit{enterprise architecture} adalah pengembangan kerangka kerja Teknologi Informasi (TI) yang memfasilitasi arah bisnis dan mengatasi kendala utama, dengan mewakili berbagai kepentingan pemangku kepentingan bisnis di seluruh perusahaan. \\
+\end{enumerate}
+
+Dari pengertian-pengertian tersebut dapat disimpulkan bahwa \textit{enterprise architecture} merupakan fondasi atau panduan tertentu yang memastikan Teknologi Informasi (TI) 
+dan cara kerja perusahaan atau proses bisnis saling terhubung untuk mendukung pencapaian tujuan strategis organisasi.
+
+Menurut \textcite{minoli2008enterprise}, sasaran EA adalah menciptakan lingkungan Teknologi Informasi (TI) yang terpadu. 
+Hal ini dicapai melalui standarisasi perangkat keras dan sistem perangkat lunak, mendorong penggunaan kembali aset TI, dan menerapkan metode yang sama dalam manajemen 
+proyek untuk pengembangan perangkat lunak di seluruh unit organisasi. Semua upaya ini dilakukan sambil tetap memastikan keselarasan penuh antara TI dengan strategi dan aspek bisnis organisasi. 
+Hasil yang diharapkan dari penerapan EA adalah menjadikan fungsi TI menjadi lebih hemat biaya, lebih strategis, dan lebih responsif terhadap kebutuhan bisnis.
+
+Tujuan dari EA adalah merancang sebuah \textit{roadmap} yang mencakup aset Teknologi Informasi (TI), proses bisnis, dan prinsip tata kelola. 
+\textit{Roadmap} ini harus mampu mendukung tercapainya strategi bisnis sekaligus menjelaskan secara rinci bagaimana TI akan digunakan untuk merealisasikan strategi tersebut \autocite{minoli2008enterprise}. 
+Tabel \ref{tbl:tujuanEA} menunjukkan persentase dari tujuan mengapa perusahaan membangun \textit{enterprise architecture}.
+
+\begin{table}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{tabular}{ | p{5cm} | p{2cm} |}
+	\hline
+	Tujuan Spesifik 	& Persentase Perusahaan \\
+	\hline
+	\textit{Business–IT alignment} 	& 20 \\
+	\textit{Business change}	& 15	 \\
+	\textit{Transformation roadmap}	& 15 \\
+  \textit{Infrastructure renewal} 	& 12 \\
+	\textit{Legacy transformation}	& 11	 \\
+	\textit{ERP implementation}	& 11 \\
+  \textit{Application renewal} 	& 10 \\
+	\textit{Mergers/acquisition}	& 4	 \\
+	\textit{Other}	& 2 \\
+	\hline
+	\end{tabular}
+\caption{Tujuan penerapan \textit{Enterprise Architecture} (EA) di perusahaan}
+\label{tbl:tujuanEA}
+\end{table}
+
+\subsection{Domain Utama \textit{Enterprise Architecture}}
+Komponen fundamental yang membentuk kerangka kerja EA dikenal sebagai \textit{architecture domains} atau \textit{domain arsitektur}. 
+Domain ini adalah pembagian logis yang mengkategorikan berbagai aspek dan perhatian yang harus diatasi oleh arsitek saat merancang sistem yang kompleks \autocite{jager2023getting}.
+
+\textit{Enterprise Architecture} (EA) dalam konteks TOGAF terbagi menjadi empat domain arsitektur yang saling terkait, yang berfungsi sebagai subsistem dari keseluruhan arsitektur perusahaan. 
+Pembagian ini menjadi panduan utama dalam proses pengembangan arsitektur \textit{Architecture Development Method} (ADM) (Gambar \ref{gambar:adm}), mencakup lapisan bisnis hingga implementasi teknologi \autocite{josey2017togaf}. 
+Gambar \ref{gambar:domain} menunjukkan struktur domain arsitektur \textit{enterprise architecture}.
+\begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+	\centering
+  \captionsetup{justification=centering}
+    	\includegraphics[width=0.7\textwidth]{image/adm.png}
+	\caption{Siklus \textit{Architecture Development Method} (ADM)}
+	\label{gambar:adm}
+\end{figure}
 
 \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
 	\centering
   \captionsetup{justification=centering}
-    	\includegraphics[width=0.7\textwidth]{image/gambar1.png}
-	\caption{Contoh gambar jaringan}
-	\label{gambar:jaringan}
+    	\includegraphics[width=0.7\textwidth]{image/domainlayer.png}
+	\caption{Domain Arsitektur \textit{Layer} EA}
+	\label{gambar:domain}
 \end{figure}
 
-Gambar umumnya tidak jelas atau kabur jika gambar tersebut:
-\begin{enumerate}[a.]
-  \item diperoleh dari hasil cropping pada suatu halaman buku atau situs web;
-  \item hasil pembesaran gambar yang gambar aslinya sebenarnya berukuran kecil; atau
-  \item disimpan dalam resolusi kecil
-\end{enumerate}
-Ketidakjelasan gambar ini dapat dilihat pada garis-garis diagram yang tidak tegas dan tulisan-tulisan dalam gambar yang tampak kabur dan kurang jelas terbaca.
-
-Untuk mendapatkan gambar yang tidak kabur (\textit{blur}), langkah-langkah berikut dapat digunakan:
-\begin{enumerate}[(a)]
-\item Gambar yang didapat di suatu pustaka atau referensi sebaiknya digambar ulang, misalnya menggunakan PowerPoint, Canva, Figma, draw.io, atau yang lainnya.
-\item Jika diagram atau ilustrasi digambar menggunakan draw.io, saat gambar disimpan ke format PNG atau JPG (\textit{export as}), lakukan \textit{zoom} ke minimal 300\% (\textit{the default value is} 100\%). 
-\item Jika diagram digambar dengan menggunakan PowerPoint, gambar dapat langsung di-\textit{copy-paste} ke Word.
-\end{enumerate}
-
-\subsection{Tabel}
-Tabel ada dua jenis, yaitu tabel yang bisa termuat dalam satu halaman dan tabel yang sangat panjang sehingga tidak muat dalam satu halaman.
-\subsubsection{Tabel yang Muat dalam Satu Halaman}
-Contoh tabel dapat dilihat pada Tabel \ref{tbl:harga1} dan \ref{tbl:harga2}. Tabel dan judulnya dibuat rata kiri dan judul tabel diletakkan di atas tabel. Usahakan tabel dapat ditulis dalam satu halaman, tidak terpotong ke halaman berikutnya.
-
-\begin{table}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
-  \begin{tabular}{ | p{2cm} | p{2cm} | p{3cm} |}
-	\hline
-	Nama 	& Satuan 		& Harga \\
-	\hline
-	Buku 	& Exemplar	& 25000 \\
-	Komputer	& Unit		& 2500000 \\
-	Pensil	& Buah		& 118900 \\
-	\hline
-	\end{tabular}
-\caption{Tabel harga bahan pokok}
-\label{tbl:harga1}
-\end{table}
-
-
-
-\begin{table}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
-	\begin{tabular}{ | l | c | r | }
-	\hline
-	Nama 	& Satuan 		& Harga \\
-	\hline
-	Buku 	& Exemplar	& 25000 \\
-	Komputer	& Unit		& 2500000 \\
-	Pensil	& Buah		& 118900 \\
-	\hline
-	\end{tabular}
-\caption{Tabel harga bahan sekunder}
-\label{tbl:harga2}
-\end{table}
-
-% -- Example of importing table from external file --
-\subsubsection{Mengimpor Tabel dari Berkas Eksternal}
-
-Tabel \ref{tbl:harga3} diimpor dari berkas eksternal \textit{table/tabel1.tex} menggunakan perintah \textit{input}. 
-Dengan demikian, jika tabel tersebut perlu diubah, cukup mengubah pada berkas eksternal tersebut tanpa perlu mengubah pada berkas utama ini.
-
-\input table/tabel1.tex
-
-
-% -- Example of long table --
-\subsubsection{Tabel yang Sangat Panjang}
-Jika tabel terlalu panjang sehingga tidak muat dalam satu halaman, gunakan paket 
-\textit{longtable} untuk membuat tabel yang dapat terpotong ke halaman berikutnya, 
-seperti pada Tabel \ref{tbl:longtable1}.
-
-\begin{longtable}{@{\extracolsep{\fill}} l c r r}
-\caption{Comprehensive Data Table Example}\label{tbl:longtable1} \\
-\toprule
-\textbf{ID} & \textbf{Name} & \textbf{Score} & \textbf{Rank} \\
-\midrule
-\endfirsthead
-
-\caption{Comprehensive Data Table Example (lanjutan)} \\
-\toprule
-\textbf{ID} & \textbf{Name} & \textbf{Score} & \textbf{Rank} \\
-\midrule
-\endhead
-
-\midrule
-\multicolumn{4}{r}{\textit{Bersambung ke halaman berikutnya}} \\
-%\bottomrule
-\endfoot
-
-\bottomrule
-\endlastfoot
-
-% === Table Data ===
-1 & Alice Smith & 89 & 5 \\
-2 & Bob Johnson & 93 & 3 \\
-3 & Carol Davis & 95 & 2 \\
-4 & Daniel Wilson & 88 & 6 \\
-5 & Eve Thompson & 97 & 1 \\
-6 & Frank Brown & 85 & 7 \\
-7 & Grace Lee & 91 & 4 \\
-8 & Henry Miller & 80 & 9 \\
-9 & Irene Garcia & 83 & 8 \\
-10 & Jack Robinson & 78 & 10 \\
-% Repeat with more rows to make it long
-11 & Kevin Harris & 76 & 11 \\
-12 & Laura Martin & 75 & 12 \\
-13 & Michael Clark & 74 & 13 \\
-14 & Natalie Lewis & 73 & 14 \\
-15 & Olivia Walker & 72 & 15 \\
-16 & Peter Hall & 71 & 16 \\
-17 & Quinn Allen & 70 & 17 \\
-18 & Rachel Young & 69 & 18 \\
-19 & Samuel King & 68 & 19 \\
-20 & Tina Wright & 67 & 20 \\
-21 & Uma Scott & 66 & 21 \\
-22 & Victor Green & 65 & 22 \\
-23 & Wendy Adams & 64 & 23 \\
-24 & Xavier Nelson & 63 & 24 \\
-25 & Yolanda Carter & 62 & 25 \\
-26 & Zachary Perez & 61 & 26 \\
-27 & Amelia Baker & 60 & 27 \\
-28 & Benjamin Rivera & 59 & 28 \\
-29 & Charlotte Rogers & 58 & 29 \\
-30 & David Murphy & 57 & 30 \\
-31 & Ethan Cooper & 56 & 31 \\
-32 & Fiona Reed & 55 & 32 \\
-33 & George Bailey & 54 & 33 \\
-34 & Hannah Cox & 53 & 34 \\
-35 & Isaac Howard & 52 & 35 \\
-36 & Julia Ward & 51 & 36 \\
-37 & Kyle Flores & 50 & 37 \\
-38 & Lily Bell & 49 & 38 \\
-39 & Mason Sanders & 48 & 39 \\
-40 & Nora Patterson & 47 & 40 \\
-41 & Owen Ramirez & 46 & 41 \\
-42 & Penelope Torres & 45 & 42 \\
-43 & Quentin Foster & 44 & 43 \\
-44 & Rebecca Gonzales & 43 & 44 \\
-45 & Sebastian Bryant & 42 & 45 \\
-46 & Taylor Alexander & 41 & 46 \\
-47 & Ursula Russell & 40 & 47 \\
-48 & Vincent Griffin & 39 & 48 \\
-49 & William Diaz & 38 & 49 \\
-50 & Zoe Simmons & 37 & 50 \\
-% (You can easily extend this list to hundreds of rows)
-\end{longtable}
-
-\subsubsection{Beberapa Contoh Penulisan Rumus atau Persamaan Matematika Menggunakan LaTeX Termasuk Penomorannya}
-Contoh rumus matematika dapat ditulis seperti pada Persamaan \ref{eq:contoh1} di bawah ini. 
-Penomoran persamaan diletakkan di sebelah kanan, dan rumus ditulis dalam mode \textit{display math}.
-\begin{equation}
-E = mc^2
-\label{eq:contoh1}
-\end{equation}
-
-Contoh lain penulisan rumus matematika yang lebih kompleks dapat ditulis seperti pada Persamaan \ref{eq:rumus2}.
-
-\begin{align}
-f(x) &= ax^2 + bx + c \\
-f'(x) &= \frac{d}{dx}(ax^2 + bx + c) \notag \\ % tidak menampilkan nomor pada baris ini
-      &= 2ax + b \label{eq:rumus2}
-\end{align}
-
-Jika rumus terlalu panjang untuk ditulis dalam satu baris, gunakan lingkungan \textit{multline} seperti pada Persamaan \ref{eq:rumus3} di bawah ini.
-\begin{multline} 
-y = a_0 + a_1x + a_2x^2 + a_3x^3 + a_4x^4 + a_5x^5 + a_6x^6 + a_7x^7 \\
-    + a_8x^8 + a_9x^9 + a_{10}x^{10} \label{eq:rumus3}
-\end{multline}
-
-Jika ada penurunan rumus yang terdiri dari beberapa baris, namun tidak memerlukan penomoran pada setiap baris, gunakan lingkungan \textit{align*}, misalnya:
-
-\begin{align*} 
-S &= \sum_{i=1}^{n} i^2 \\
-  &= 1^2 + 2^2 + 3^2 + \cdots + n^2 \\
-  &= \frac{n(n + 1)(2n + 1)}{6}
-\intertext{Contoh lainnya adalah rumus untuk mencari nilai rata-rata fungsi $f(x)$ pada interval $[p, q]$:}
-\bar{f} &= \frac{1}{q - p} \int_{p}^{q} f(x) \, dx \\
-        &= \frac{1}{q - p} \int_{p}^{q} (ax^2 + bx + c) \, dx \\
-        &= \frac{1}{q - p} \left[ \frac{a}{3}x^3 + \frac{b}{2}x^2 + cx \right]_p^q \\
-        &= \frac{a(q^3 - p^3)}{3(q - p)} + \frac{b(q^2 - p^2)}{2(q - p)} + c \label{eq:rumus4}
-\end{align*}
-
-
-
-\subsection{Algoritma, Pseudocode, atau Kode}
-Contoh penulisan algoritma atau pseudocode dapat ditulis seperti pada Kode \ref{alg:contoh1} di bawah ini. 
-Gunakan paket \textit{listings} untuk menulis source code dalam bahasa pemrograman tertentu, seperti pada Kode \ref{lst:contoh1}. 
-
-
-% -- Example of pseudocode and source code listing --
-% -- Gunakan minipage agar listing tidak terpotong ke halaman berikutnya --
-\begin{minipage}{\textwidth} 
-\begin{lstlisting}[frame=lines, captionpos=t, caption={Contoh pseudocode}, label={alg:contoh1}]
-ALGORITHM HelloWorld
-   PRINT "Hello, World!"
-END ALGORITHM
-\end{lstlisting}
-\end{minipage}
-
-\begin{minipage}{\textwidth}
-\begin{lstlisting}[language=Python, frame=single, caption={Contoh source code Python}, captionpos=t, label={lst:contoh1}]
-def hello_world():
-    print("Hello, World!")       
-hello_world()
-\end{lstlisting}
-\end{minipage}
-
-
-\section{Beberapa Kesalahan Penulisan yang Sering Terjadi}
-\subsection{Penggunaan Kata "di mana" atau "dimana"}
-Banyak yang menuliskan kata "di mana" atau "dimana" sebagai pengganti kata "which" dalam bahasa Inggris. 
-Padahal, penggunaan kata "di mana" atau "dimana" tidak tepat dalam konteks tersebut. Demikian juga untuk kata serupa, misalnya "yang mana".
-Kata "di mana" atau "dimana" ini harus diganti dengan kata lain, seperti "dengan", "tempat", "yang", dan sebagainya tergantung kalimatnya.
-Penjelasan lengkap dapat dilihat pada \autocite{BPBI}.
-
-\subsection{Penggunaan Kata "sedangkan" dan "sehingga"}
-
-\begin{table}[t]
-  \begin{tabular}{|c|l|l|}
-  \hline
-  Kata & Salah & Benar \\ \hline
-  sedangkan & \begin{tabular}[c]{@{}c@{}}Sedangkan sistem lama masih\\ digunakan oleh banyak pengguna.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Sistem lama masih digunakan\\ oleh banyak pengguna,\\ sedangkan sistem baru belum siap.\end{tabular} \\ \hline
-  sehingga & \begin{tabular}[c]{@{}c@{}}Sehingga sistem lama masih\\ digunakan oleh banyak pengguna.\end{tabular} & \begin{tabular}[c]{@{}c@{}}Sistem lama masih digunakan\\ oleh banyak pengguna sehingga\\ sistem baru belum siap.\end{tabular} \\ \hline
-  \end{tabular}
-  \caption{Contoh penggunaan kata "sedangkan" dan "sehingga"}
-  \label{tbl:sedangkan_sehingga}
-\end{table}
-
-Kata "sedangkan" dan "sehingga" adalah kata hubung atau konjungsi. 
-Konjungsi adalah kata atau ungkapan yang menghubungkan satuan bahasa 
-(kata, frasa, klausa, dan kalimat). 
-Konjungsi dapat dibagi menjadi konjungsi intrakalimat dan antarkalimat.  
-Kata "sedangkan" menghubungkan dua klausa yang bersifat kontrasif, 
-sedangkan "sehingga" menghubungkan dua klausa yang bersifat kausal. 
-Dalam ragam formal, kata hubung “sedangkan” dan “sehingga” hanya dapat digunakan 
-sebagai konjungsi intrakalimat sehingga kedua konjungsi itu \textbf{tidak dapat diletakkan pada awal kalimat}.
-Selain itu, penggunaan kata "sedangkan" harus didahului oleh koma (,), sedangkan kata "sehingga" tidak perlu didahului oleh koma (,).
-Contoh penggunaan yang benar dan salah dapat dilihat pada Tabel \ref{tbl:sedangkan_sehingga}.
-
-
-\subsection{Penggunaan Istilah yang Tidak Baku}
-Ada beberapa istilah yang sering digunakan dalam pembicaraan sehari-hari, tetapi tidak baku dalam penulisan ilmiah.
-Beberapa istilah tersebut antara lain:
 \begin{enumerate}
-  \item analisa $\rightarrow$ analisis
-  \item eksisting atau existing $\rightarrow$ yang ada atau saat ini
-  \item bisnis proses $\rightarrow$ proses bisnis
-  \item user $\rightarrow$ pengguna
-  \item system $\rightarrow$ sistem
-  \item database $\rightarrow$ basis data
-  \item aktifitas $\rightarrow$ aktivitas
-  \item efektifitas $\rightarrow$ efektivitas
-  \item sosial media $\rightarrow$ media sosial
+    \item  \textit{Business Architecture} \\
+    Domain ini bertujuan untuk mendefinisikan kerangka kerja untuk seluruh operasi perusahaan. Arsitektur bisnis mencakup strategi bisnis, tata kelola (\textit{governance}), organisasi, dan proses bisnis utama. Dalam konteks \textit{phase} B dari ADM, fokus arsitektur ini adalah mengembangkan arsitektur bisnis target dengan memodelkan kapabilitas, fungsi, layanan, dan peran yang diperlukan oleh bisnis untuk merealisasikan visi arsitektur. Artefak yang dihasilkan meliputi struktur organisasi, tujuan bisnis, proses bisnis, dan model data bisnis.\\
+
+    \item  \textit{Information Systems Architectures} \\
+    Domain ini bertujuan untuk mendokumentasikan organisasi fundamental dari sistem TI perusahaan. Arsitektur sistem informasi berfungsi sebagai jembatan antara kebutuhan bisnis dengan teknologi yang akan mendukungnya, dan dipecah menjadi dua sub-komponen utama.
+    \begin{enumerate}[a.]
+        \item  \textit{Data Architecture} \\
+        Arsitektur data berfokus pada struktur aset data logis dan fisik serta sumber daya manajemen data organisasi. Dalam \textit{phase} C ADM, tujuannya adalah mendefinisikan jenis dan sumber data yang dibutuhkan bisnis, serta bagaimana data dikelola. Artefak yang dicakup meliputi model data bisnis, model data logis, dan matriks yang memetakan hubungan antara entitas data dengan fungsi bisnis.
+
+        \item  \textit{Application Architecture} \\
+        Arsitektur aplikasi menyediakan cetak biru untuk sistem aplikasi individual yang akan diterapkan, termasuk interaksi di antara sistem tersebut dan kaitannya dengan proses bisnis inti. Dalam \textit{phase} C ADM, domain ini mendefinisikan jenis sistem aplikasi yang diperlukan untuk memproses data dan mendukung fungsi bisnis.\\
+    \end{enumerate}
+
+    \item  \textit{Technology Architecture} \\
+    Domain ini bertujuan untuk pondasi atau infrastruktur yang mendukung berjalannya seluruh arsitektur aplikasi, data, dan bisnis. Domain ini mendefinisikan secara komprehensif kapabilitas perangkat lunak dan perangkat keras yang dibutuhkan untuk mendukung penerapan layanan bisnis. Cakupan arsitektur teknologi sangat luas, meliputi seluruh infrastruktur TI seperti \textit{middleware}, jaringan, komunikasi, kemampuan pemrosesan, dan standar-standar teknis yang harus dipatuhi. Dalam \textit{phase} D ADM, domain ini mencakup pemodelan komponen teknologi, \textit{platform} teknologi, dekomposisi \textit{platform}, serta spesifikasi rinci mengenai \textit{hardware}, jaringan, dan beban pemrosesan, yang semuanya diperlukan untuk mewujudkan implementasi sistem informasi secara efektif dan efisien.
 \end{enumerate}
 
-\subsection{Pemisah Desimal dan Ribuan}
-Tanda pemisah desimal dalam bahasa Indonesia adalah tanda koma, contoh:
+\subsection{Peran \textit{Enterprise Architecture}}
+Menurut \textcite{josey2017togaf}, peran EA dalam menjembatani strategi bisnis dengan implementasi teknologi antara lain sebagai berikut:
 \begin{enumerate}
-  \item (Salah) Akurasi naik menjadi 50.6\% 
-  \item (Benar) Akurasi naik menjadi 50,6\% 
+  \item Kerangka kerja arsitektur yang terbukti dan andal, berfungsi sebagai alat untuk membantu dalam adopsi, produksi, penggunaan, dan pemeliharaan arsitektur.
+  \item Menyediakan metode \textit{Architecture Development Method} (ADM) untuk mengembangkan arsitektur perusahaan yang secara spesifik dirancang untuk memenuhi persyaratan bisnis.
+  \item Menyediakan \textit{architecture capability framework}, yaitu serangkaian sumber daya untuk mendefinisikan organisasi, proses, peran, dan tanggung jawab yang diperlukan untuk mendirikan dan mengoperasikan praktik arsitektur yang efektif.
+  \item Memandu pengembangan empat domain arsitektur yang saling terkait seperti arsitektur bisnis, arsitektur data, arsitektur aplikasi, dan arsitektur teknologi.
+  \item Memfasilitasi penggunaan kembali aset arsitektur dan mengklasifikasikan \textit{deliverable} melalui konsep \textit{enterprise continuum} dan \textit{architecture repository}.\\
+\end{enumerate} 
+
+Menurut \textcite{jager2023getting}, peran \textit{enterprise architecture} antara lain sebagai berikut:
+\begin{enumerate}
+  \item Menghubungkan strategi dan eksekusi untuk membantu organisasi mencapai tujuan dan sasarannya.
+  \item Kerangka kerja yang memberikan pemahaman dan pengelolaan struktur dan strategi organisasi secara keseluruhan.
+  \item Menciptakan pandangan holistik dari aktivitas perusahaan, termasuk proses bisnis, sistem informasi, dan infrastruktur teknologi.
+  \item Memastikan bahwa semua elemen organisasi selaras dengan tujuan dan sasaran yang ditetapkan.\\
+\end{enumerate} 
+
+Dari peran-peran EA tersebut dapat disimpulkan bahwa EA sangat penting karena menghubungi strategi bisnis dan implementasi teknologi serta memastikan keselerasan operasional dan tata kelola.
+
+\subsection{Tantangan Penerapan \textit{Enterprise Architecture}}
+Menurut \textcite{jager2023getting}, tantangan dalam mengimplementasikan EA ke dalam praktik nyata antara lain sebagai berikut:
+\begin{enumerate}
+  \item Menerjemahkan kerangka kerja arsitektur yang tersedia menjadi aplikasi praktis yang dapat digunakan.
+  \item Banyak organisasi yang memiliki tingkat kematangan arsitektur yang rendah atau tidak ada sama sekali , sehingga kerangka kerja yang komprehensif terasa berlebihan
+  \item Proses implementasi \textit{enterprise architecture} merupakan masalah yang kompleks dan memakan waktu karena harus mengubah cara kerja yang sudah tertanam dalam sistem dan budaya organisasi.
+  \item \textit{Enterprise architecture} sering menghadapi resistensi karyawan merasa prinsip-prinsip dasar yang diperkenalkan membatasi kebebasan mereka dalam pekerjaan.
+  \item Pencapaian tujuan yang konsisten terhambat jika organisasi gagal dalam menggunakan bahasa yang konsisten dan seragam saat berkomunikasi tentang arsitektur.
 \end{enumerate}
 
-\subsection{Daftar atau \textit{List}}
-Ada beberapa aturan penulisan daftar atau \textit{list} yang perlu diperhatikan, antara lain:
-\begin{enumerate}[a)]
-\item Jika memungkinkan, hindari penggunaan “bullet points” atau sejenisnya. Sebaiknya, gunakan angka (1, 2, 3, ...) atau huruf (a, b, c, …). Dengan demikian, pembaca dapat dengan mudah melihat jumlah \textit{item} atau \textit{list}. 
-\item Jika dalam daftar hanya ada satu item, tidak perlu menggunakan nomor urut.
-\item Penjelasan atau deskripsi suatu item sebaiknya menyatu dengan judul item tersebut, tidak berbeda halaman. Contoh yang salah: judul item ada di halaman 10, namun deskripsinya di halaman 11. Sebaiknya pindahkan judul tersebut ke halaman 11.
-\item Jika penjelasan atau deskripsi suatu item cukup panjang, misalnya lebih dari 1 halaman atau terdiri atas beberapa paragraf, sebaiknya setiap item tersebut dijadikan judul subbab, kecuali jika level subbab sudah mencapai level 4. 
+\section{\textit{Enterprise Architecture Governance}}
+
+\subsection{Definisi dan Tujuan \textit{Enterprise Architecture Governance}}
+Menurut \textcite{korhonen2009ea}, \textit{EA governance} adalah mekanisme kontrol yang berorientasi ke masa depan yang bertujuan untuk merancang kondisi arsitektur 
+perusahaan di masa depan demi mendukung strategi bisnis. \textit{EA governance} menekankan pada perencanaan dan efektivitas eksternal organisasi secara keseluruhan.
+Tujuan \textit{EA governance} adalah memastikan pengembangan arsitektur bersifat sistemik dan mengarah pada tujuan strategis jangka panjang.
+
+\subsection{Tantangan Penerapan \textit{Enterprise Architecture Governance}}
+Menurut \textcite{korhonen2009ea}, tantangan penerapan \textit{EA governance} antara lain sebagai berikut:
+\begin{enumerate}
+  \item Konsep \textit{EA Governance} belum didefinisikan secara memadai yang menyulitkan implementasi konsisten dan terarah.
+  \item Minimnya keterlibatan sisi bisnis sehingga potensi EA di perusahaan tidak terealisasi.
+  \item Proses manajemen yang digunakan dalam \textit{IT Governance} tidak memadai untuk \textit{EA Governance} yang bersifat holistik dan strategis.
+  \item Kurangnya badan tata kelola perantara \textit{(intermediating governance body)} antara \textit{Chief Enterprise Architect} dan Eksekutif Bisnis.
 \end{enumerate}
 
-\subsection{Penggunaan Kata "masing-masing" dan "setiap"}
-Kata “masing-masing” digunakan di belakang kata yang diterangkan, misalnya 
-"Setiap proses menggunakan algoritma masing-masing". Kata “tiap-tiap” atau “setiap”
-ditempatkan di depan kata yang diterangkan, misalnya
-"Setiap proses menggunakan algoritma tertentu".
+\section{\textit{Enterprise Architecture Maturity Model (EAMM)}}
+
+\subsection{Pengertian dan Tujuan \textit{Enterprise Architecture Maturity Model (EAMM)}}
+Menurut \textcite{jager2023getting}, \textit{Enterprise Architecture Maturity Model} (EAMM) adalah kerangka yang digunakan untuk menilai sejauh mana penerapan EA dalam organisasi
+telah berjalan secara efektif dan berkesinambungan. Model ini membantu organisasi memahami posisi mereka dalam perjalanan pengembangan arsitektur perusahaan, serta memberikan panduan untuk meningkatkan kualitas tata kelola dan implementasi EA secara bertahap.
+
+Tujuan utama dari EAMM adalah untuk menyediakan alat ukur yang sistematis dalam mengevaluasi kemampuan organisasi dalam mengelola proses arsitektur, sekaligus mengidentifikasi area yang perlu ditingkatkan. 
+Dengan memahami tingkat kematangan EA, organisasi dapat merencanakan langkah perbaikan yang lebih terarah, memastikan keselarasan antara strategi bisnis dan teknologi informasi, serta meningkatkan nilai tambah EA terhadap pengambilan keputusan manajerial \autocite{jager2023getting}.
+
+\subsection{Tingkatan \textit{Maturity Model}}
+Model kematangan EA umumnya terdiri dari lima tingkat yang menggambarkan perkembangan organisasi dari tahap awal hingga tingkat optimal. Setiap tingkatan menunjukkan sejauh mana proses, kebijakan, dan mekanisme EA telah diintegrasikan dalam kegiatan organisasi \autocite{jager2023getting}.
+
+\begin{enumerate}
+  \item  Level 1 (\textit{Ad Hoc})\\
+  Pada tahap ini, aktivitas EA belum memiliki struktur atau prosedur formal. Selain itu, implementasi EA masih bersifat individual dan sporadis, tanpa panduan yang baku. Ciri-ciri utama tahapan ini yaitu:
+  \begin{enumerate}[a.]
+    \item Belum ada kerangka kerja arsitektur yang digunakan.
+    \item Dokumentasi arsitektur bersifat tidak teratur dan sulit diakses.
+    \item Kegiatan arsitektur dilakukan berdasarkan kebutuhan jangka pendek.
+    \item Ketergantungan tinggi pada individu tertentu yang memahami sistem.
+    \item Tidak ada koordinasi lintas unit dalam pengelolaan arsitektur.\\
+  \end{enumerate}
+
+  \item  Level 2 (\textit{Repeatable}) \\
+  Pada tahap ini, proses arsitektur mulai dapat diulang dengan pola dan praktik yang relatif serupa di beberapa bagian organisasi, meskipun belum sepenuhnya terstandar. Ciri-ciri utama tahapan ini yaitu:
+  \begin{enumerate}[a.]
+    \item Adanya inisiatif awal untuk menyusun standar dan template dasar.
+    \item Beberapa proyek mulai menerapkan pendekatan EA dengan pola serupa.
+    \item Dokumentasi sudah mulai dilakukan, tetapi belum lengkap atau konsisten.
+    \item Kesadaran terhadap pentingnya EA mulai tumbuh di tingkat manajerial.
+    \item Belum ada mekanisme pengendalian mutu atau evaluasi yang terukur.\\
+  \end{enumerate}
+
+  \item  Level 3 (\textit{Defined}) \\
+  Pada tahap ini, organisasi telah memiliki kerangka kerja dan metodologi EA yang terdokumentasi secara formal serta digunakan secara konsisten di berbagai unit kerja. Ciri-ciri utama tahapan ini yaitu:
+  \begin{enumerate}[a.]
+    \item Kerangka kerja arsitektur (seperti TOGAF atau Zachman) telah diadopsi secara resmi.
+    \item Proses, tanggung jawab, dan peran dalam pelaksanaan EA terdokumentasi dengan baik.
+    \item Standar, kebijakan, dan pedoman EA diterapkan di seluruh organisasi.
+    \item Tersedia \textit{roadmap} jangka menengah dan panjang untuk pengembangan arsitektur.
+    \item Muncul koordinasi antar fungsi bisnis dan TI dalam perencanaan sistem dan layanan.\\
+  \end{enumerate}
+
+  \item  Level 4 (\textit{Managed}) \\
+  Pada tahap ini, organisasi telah memiliki mekanisme pengukuran dan pengendalian terhadap pelaksanaan EA. Hasil evaluasi tersebut digunakan untuk meningkatkan kualitas proses arsitektur. Ciri-ciri utama tahapan ini yaitu:
+  \begin{enumerate}[a.]
+    \item Tersedia metrik kinerja dan indikator evaluasi efektivitas EA.
+    \item Data hasil pengukuran dimanfaatkan untuk melakukan perbaikan berkelanjutan.
+    \item EA mulai terintegrasi dengan proses perencanaan strategis dan manajemen portofolio TI.
+    \item Kepatuhan terhadap standar arsitektur diawasi secara formal melalui proses \textit{review}.
+    \item Dukungan manajemen senior sudah kuat dalam pengambilan keputusan berbasis EA.\\
+  \end{enumerate}
+
+  \item  Level 5 (\textit{Optimizing}) \\
+  Pada tahap ini, organisasi telah mencapai kematangan penuh dan menjadikan EA sebagai instrumen utama dalam inovasi serta transformasi bisnis. Ciri-ciri utama tahapan ini yaitu:
+  \begin{enumerate}[a.]
+    \item EA sepenuhnya terintegrasi ke dalam tata kelola dan proses bisnis organisasi.
+    \item Proses perbaikan dilakukan secara berkelanjutan melalui mekanisme umpan balik.
+    \item EA menjadi dasar bagi inovasi digital dan efisiensi lintas divisi.
+    \item Organisasi berbagi praktik terbaik antar unit dan bahkan antar organisasi.
+    \item Nilai bisnis dari penerapan EA diukur dan dievaluasi secara berkesinambungan.\\
+  \end{enumerate}
+\end{enumerate}
+
+\section{\textit{Best Practice} dan Studi Terkait}
+\subsection{SAP LeanIX sebagai \textit{Platform} Pendukung Implementasi \textit{Enterprise Architecture}}
+SAP LeanIX merupakan \textit{platform} manajemen arsitektur perusahaan \textit{Enterprise Architecture Management} (EAM) yang digunakan secara luas dalam mengoptimalkan pengelolaan aplikasi, proses bisnis, dan infrastruktur TI organisasi.
+\textit{Platform} ini bertindak sebagai tempat utama untuk mendokumentasikan dan menganalisis arsitektur, sehingga membantu membuat keputusan strategis jadi lebih efektif. Beberapa fitur utama yang ditawarkan LeanIX meliputi \textit{Application Portfolio Management, 
+Interface Catalog}, dan \textit{Fact Sheet}. Fitur-fitur ini membantu perusahaan memetakan serta mengatur aplikasi yang mereka gunakan, menemukan keterkaitan antara berbagai sistem, dan mencatat detail krusial tentang aset teknologi serta proses bisnis dengan cara yang terorganisir \autocite{LeanixEAGov}.
+
+Selain fungsi manajemen aplikasi, SAP LeanIX juga mendukung praktik \textit{EA Governance} dengan menyediakan alat pengawasan, proses standarisasi, serta pembuatan kebijakan dan prosedur sesuai kebutuhan organisasi.
+Perusahaan juga dapat membangun kerangka kerja \textit{governance} yang adaptif, menetapkan aturan pengelolaan perubahan arsitektur, serta memastikan setiap proyek IT selaras dengan tujuan bisnis \autocite{LeanixEAGov}.
+
+\subsection{Studi Kasus Implementasi \textit{EA Governance}}
+Fungsi-fungsi utama SAP LeanIX telah banyak diaplikasikan dalam berbagai studi kasus di industri dan sektor publik guna meningkatkan praktik \textit{EA Governance}. Salah satu contoh di perusahaan Reckitt, SAP LeanIX digunakan untuk mendukung migrasi aplikasi menuju \textit{cloud} dan memfasilitasi sinergi lintas unit bisnis, 
+sehingga proses digitalisasi lebih efisien dan terukur \autocite{Christ2021LeanixReckitt}. Studi pada merger dua perusahaan asuransi besar, Helvetia dan Nationale Suisse, memperlihatkan LeanIX efektif dalam mempercepat penggabungan proses bisnis dan sistem teknologi, 
+melalui integrasi \textit{governance} serta pelaporan digital yang lebih transparan \autocite{Mone2018Helvetia}.
+
+\subsection{Analisis Temuan Penelian Terdahulu}
+Hasil penelitian \textcite{Hanafi2023PeranEA} menegaskan bahwa pelaksanaan \textit{EA Governance} mampu memberikan dampak positif yang nyata terhadap peningkatan kinerja organisasi pemerintahan daerah. 
+Praktik \textit{EA Governance} yang dijalankan dengan baik berpengaruh pada penyusunan struktur organisasi yang rapi, memperlancar proses bisnis, serta meningkatkan kelincahan institusi dalam menghadapi perubahan lingkungan eksternal. Penelitian tersebut juga menunjukkan bahwa faktor kepemimpinan, bila diaplikasikan sebagai variabel moderasi, dapat memperkuat hubungan antara tata kelola EA dan efektivitas organisasi pemerintah.
+
+Dalam penelitian tersebut memiliki kekurangan yang relevan sebagai dasar bagi penelitian ini seperti sebagai berikut: 
+\begin{enumerate}
+  \item Analisis terkait kondisi nyata praktik \textit{EA Governance} masih sangat minim.
+  \item Penelitian belum berfokus kepada perancangan model perbaikan \textit{EA Governance} yang menyeluruh.
+\end{enumerate}
